Bug fix: color overflow

--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,7 @@ body {
 
 #tshirt_block {
     position: relative;
+    display: inline-block;
 }
 
 #white-btn {
